# jhome-core

./: Cargo.toml  README.md
src/: core.rs
src/core/: db.rs  ipc.rs  model.rs
src/core/db/: device.rs
src/core/db/data/: measurement.rs  unit.rs
src/core/db/data/measurement/: catalog.rs  definition.rs  measurement.rs
src/core/db/data/unit/: catalog.rs  unit.rs
src/core/db/device/: identification.rs
src/core/db/system/: composition.rs
src/core/ipc/: system.rs  uri.rs
src/core/ipc/data/measurement/: value.rs
src/core/ipc/device/: hello.rs
src/core/ipc/system/: who_are_you.rs
src/core/ipc/uri/: uri_list.rs
src/core/model/: data.rs  device.rs
src/core/model/data/measurement/: catalog.rs  definition.rs  measurement.rs
src/core/model/data/unit/: catalog.rs  unit.rs
src/core/model/device/: identification.rs
src/core/model/system/: composition.rs
