[package]
name = "jhome-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
zenoh = "0.10.1-rc"
rand = "0.8.5"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
surrealdb = { version = "1.3.0", features = ["kv-mem"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
